# PXL

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  styleplot.py  test.py  timeseries.py
.github/workflows/: publish.yml
pxl/: __init__.py  fdiff.py  io.py  styleplot.py  timeseries.py
pxl/tests/: __init__.py  styleplot_test.py  test_fdiff.py  test_io.py  test_styleplot.py  test_timeseries.py  timeseries_test.py
