[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Pete Bachant", email = "petebachant@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "seaborn",
  "matplotlib",
  "uncertainties",
  "h5py",
]
description = "Reproducibility simplified."
dynamic = ["version"]
name = "PXL"
readme = "README.md"
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/petebachant/PXL"
Issues = "https://github.com/petebachant/PXL/issues"

[tool.hatch.build.targets.wheel]
packages = ["pxl"]

[tool.hatch.version]
path = "pxl/__init__.py"
